# State.io

./: CMakeLists.txt  README.md  main.c
images/: colors.txt
myheaders/: my_audio.c  my_audio.h  my_colors.c  my_colors.h  my_image.c  my_image.h  my_map.c  my_map.h  my_text.c  my_text.h
